--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "husky": "^6.0.0",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
+    "rollup-plugin-visualizer": "^5.4.1",
     "typescript": "^4.1.2",
-    "vite": "^2.1.5"
+    "vite": "^2.1.5",
+    "vite-plugin-windicss": "^0.14.6",
+    "windicss": "^2.5.14"
   },
   "husky": {
     "hooks": {
