--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prismjs": "^1.23.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-draggable": "^4.4.3",
     "react-redux": "^7.2.4",
     "react-syntax-highlighter": "^15.4.3"
   },
