--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@blueprintjs/icons": "4.0.0-alpha.0",
     "@reduxjs/toolkit": "^1.5.1",
     "clsx": "^1.1.1",
+    "immer": "^8.0.1",
     "open-color": "^1.8.0",
     "points-on-curve": "^0.2.0",
     "prismjs": "^1.23.0",
@@ -21,7 +22,8 @@
     "react-dom": "^17.0.0",
     "react-draggable": "^4.4.3",
     "react-redux": "^7.2.4",
-    "react-syntax-highlighter": "^15.4.3"
+    "react-syntax-highlighter": "^15.4.3",
+    "short-uuid": "^4.1.0"
   },
   "devDependencies": {
     "@types/prismjs": "^1.16.5",
