--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@blueprintjs/icons": "4.0.0-alpha.0",
     "@reduxjs/toolkit": "^1.5.1",
     "clsx": "^1.1.1",
+    "copy-to-clipboard": "^3.3.1",
     "immer": "^8.0.1",
     "open-color": "^1.8.0",
     "points-on-curve": "^0.2.0",
