--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^1.1.1",
     "copy-to-clipboard": "^3.3.1",
     "immer": "^9.0.2",
+    "nanoid": "^3.1.23",
     "open-color": "^1.8.0",
     "points-on-curve": "^0.2.0",
     "prismjs": "^1.23.0",
@@ -24,8 +25,7 @@
     "react-dom": "^17.0.0",
     "react-draggable": "^4.4.3",
     "react-redux": "^7.2.4",
-    "react-syntax-highlighter": "^15.4.3",
-    "short-uuid": "^4.1.0"
+    "react-syntax-highlighter": "^15.4.3"
   },
   "devDependencies": {
     "@types/prismjs": "^1.16.5",
