--- a/package.json
+++ b/package.json
@@ -16,18 +16,17 @@
     "@reduxjs/toolkit": "^1.5.1",
     "clsx": "^1.1.1",
     "copy-to-clipboard": "^3.3.1",
+    "d3-shape": "^3.0.1",
     "immer": "^9.0.2",
     "nanoid": "^3.1.23",
-    "open-color": "^1.8.0",
-    "points-on-curve": "^0.2.0",
     "prismjs": "^1.23.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-draggable": "^4.4.3",
-    "react-redux": "^7.2.4",
-    "react-syntax-highlighter": "^15.4.3"
+    "react-redux": "^7.2.4"
   },
   "devDependencies": {
+    "@types/d3-shape": "^2.1.0",
     "@types/prismjs": "^1.16.5",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
