--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-draggable": "^4.4.3",
-    "react-redux": "^7.2.4"
+    "react-redux": "^7.2.4",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@types/d3-shape": "^2.1.0",
     "@types/prismjs": "^1.16.5",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/redux-logger": "^3.0.8",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "husky": "^6.0.0",
     "prettier": "^2.2.1",
