--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview",
     "prepare": "husky install",
@@ -39,6 +39,7 @@
     "rollup-plugin-visualizer": "^5.4.1",
     "typescript": "^4.1.2",
     "vite": "^2.1.5",
+    "vite-plugin-html": "^2.0.7",
     "vite-plugin-windicss": "^0.17.0",
     "windicss": "^3.0.12",
     "windicss-analysis": "^0.2.0"
